--- a/products.html
+++ b/products.html
@@ -119,6 +119,17 @@
           Open Recipe Scaling →
         </a>
       </section>
+      <!-- SAMPLE BUILDER (R&D) -->
+      <section class="card">
+        <h2>Sample Builder (R&D)</h2>
+        <p>
+          Create 100–375 mL tasting samples for flavor development.
+          Promote approved samples into Base Recipes.
+        </p>
+      <a href="sample-builder.html">
+        Open Sample Builder →
+      </a>
+      </section>
 
       <!-- BASE RECIPES -->
       <section class="card">
