--- a/sample-builder.html
+++ b/sample-builder.html
@@ -385,7 +385,7 @@
       .catch(() => {});
   </script>
 
-  <script src="sample-builder.logic.js?v=1.0.0"></script>
-  <script src="sample-builder.ui.js?v=1.0.0"></script>
+  <script src="logic.js?v=1.0.0"></script>
+  <script src="ui.js?v=1.0.0"></script>
 </body>
 </html>
